# rerun

./: .gitignore  .travis.yml  AUTHORS  ChangeLog  Makefile.am  Makefile.in  NEWS  README  README.md  bash_completion.sh  configure.ac  devpkg.spec  index.html  params.json  rerun  setup.sh  test.sh
SPECS/: rerun.spec
etc/: bash_completion.sh  devpkg.spec  travis-ci-modules.sh  travis-ci.sh
man/man1/: rerun.1
modules/stubbs/: README.md  license.md  metadata  stubbs.1
modules/stubbs/commands/: add-command.sh  add-option.sh
modules/stubbs/commands/add-command/: README.md  command.option  default  default.sh  desc.option  metadata  name.option  options.sh  overwrite.option  ovewrite.option  script  template.option
modules/stubbs/commands/add-module/: README.md  default.sh  description.option  interpreter.option  language.option  metadata  module.option  name.option  options.sh  script
modules/stubbs/commands/add-option/: README.md  arg.option  command.option  default  default.sh  desc.option  long.option  metadata  module.option  name.option  options.sh  range.option  required.option  script
modules/stubbs/commands/archive/: README.md  default.sh  file.option  list.option  metadata  modules.option  options.sh  release.option  script  version.option
modules/stubbs/commands/docs/: README.md  default  default.sh  file.option  metadata  module.option  name.option  options.sh  script
modules/stubbs/commands/edit/: README.md  default  default.sh  metadata  script
modules/stubbs/commands/extract/: default.sh  metadata
modules/stubbs/commands/migrate/: .script.swp  README.md  metadata  options.sh  script
modules/stubbs/commands/rm-command/: README.md  metadata  script
modules/stubbs/commands/rm-option/: README.md  default  default.sh  metadata  script
modules/stubbs/commands/test/: README.md  command.option  default.sh  logs.option  metadata  module.option  name.option  script
modules/stubbs/docs/: stubbs.1
modules/stubbs/etc/: module
modules/stubbs/etc/commands/add-module/: add-module.command  name.option
modules/stubbs/etc/commands/add-option/: arg.option  command.option  name.option
modules/stubbs/lib/: README.md  command.sh  docs.css  docs.sh  functions.sh  roundup  test.sh
modules/stubbs/lib/bash/: generate-options  generate-options~  metadata  metadata~
modules/stubbs/lib/bash/templates/: default  script
modules/stubbs/lib/groovy/: generate-options
modules/stubbs/lib/interpreters/: README.md
modules/stubbs/lib/interpreters/bash/: generate-options  metadata
modules/stubbs/lib/interpreters/bash/templates/: functions.sh  script
modules/stubbs/lib/interpreters/groovy/: metadata
modules/stubbs/lib/interpreters/python/: generate-options  metadata
modules/stubbs/lib/interpreters/python/templates/: functions.py
modules/stubbs/lib/meta-modules/: README.md
modules/stubbs/lib/meta-modules/bash/: generate-options  metadata
modules/stubbs/lib/meta-modules/bash/templates/: functions.sh
modules/stubbs/lib/meta-modules/groovy/: metadata
modules/stubbs/lib/meta-modules/groovy/templates/: script
modules/stubbs/lib/meta-modules/python/: metadata
modules/stubbs/lib/python/: metadata
modules/stubbs/lib/python/templates/: script
modules/stubbs/lib/stub/: README.md
modules/stubbs/lib/stub/bash/: generate-options  metadata
modules/stubbs/lib/stub/bash-pedantic/: generate-options  metadata
modules/stubbs/lib/stub/bash-pedantic/templates/: functions.sh
modules/stubbs/lib/stub/bash/templates/: functions.sh  script
modules/stubbs/options/answers/: README.md  metadata
modules/stubbs/options/arg/: README.md  metadata
modules/stubbs/options/command/: README.md  metadata
modules/stubbs/options/default/: README.md  metadata
modules/stubbs/options/description/: README.md  metadata
modules/stubbs/options/dir/: README.md  metadata
modules/stubbs/options/export/: README.md  metadata
modules/stubbs/options/file/: README.md  metadata
modules/stubbs/options/format/: README.md  metadata
modules/stubbs/options/generate-help/: metadata
modules/stubbs/options/help/: metadata
modules/stubbs/options/logs/: metadata
modules/stubbs/options/long/: README.md  metadata
modules/stubbs/options/meta-module/: README.md  metadata
modules/stubbs/options/module/: README.md  metadata
modules/stubbs/options/modules/: README.md  metadata
modules/stubbs/options/option/: README.md  metadata
modules/stubbs/options/overwrite/: README.md  metadata
modules/stubbs/options/plan/: README.md  metadata
modules/stubbs/options/range/: README.md  metadata
modules/stubbs/options/release/: README.md  metadata
modules/stubbs/options/required/: README.md  metadata
modules/stubbs/options/short/: README.md  metadata
modules/stubbs/options/strict/: metadata
modules/stubbs/options/template/: README.md  metadata
modules/stubbs/options/usage/: metadata
modules/stubbs/options/version/: README.md  metadata
modules/stubbs/templates/: default.sh  extract  functions.sh  launcher  rerun-module.spec  rerun-module.spec.txt  test.functions.sh  test.roundup  test.sh
modules/stubbs/tests/: add-command-1-test.sh  add-module-1-test.sh  add-option-1-test.sh  archive-1-test.sh  docs-1-test.sh  functional-1-test.sh  functional-bash-1-test.sh  functional-bash-2-test.sh  functional-bash-test.sh  functions.sh  migrate-1-test.sh  options.sh  rm-command-1-test.sh  rm-option-1-test.sh  stubbs-functions-1-test.sh
tests/: functions.sh  rerun-0-test.sh  rerun-1-test.sh  rerun-2-test.sh  rerun-3-test.sh  rerun-4-test.sh  rerun-5-test.sh
tests/platform/: README.md
tests/platform/centos/centos-5.8-x86-64/: Vagrantfile  bootstrap.sh
tests/platform/centos/centos-6.3-x86_64/: Vagrantfile  bootstrap.sh  test.sh
tests/platform/centos/common/: README.md  build-package-test.sh
tests/platform/centos56/: Vagrantfile  bootstrap.sh
tests/platform/centos63/: Vagrantfile  bootstrap.sh  test.sh
tests/platform/centos63/tests/: build-package.sh
tests/vagrant/centos63/: Vagrantfile  bootstrap.sh
