AC_INIT([rerun], m4_esyscmd_s([grep ^RERUN_VERSION rerun  | cut -d= -f2]), [rerun-discuss@googlegroups.com],
             [rerun], [https://github.com/rerun/rerun/wiki])

dnl Created by stagr.lee@gmail.com, 27SEP11
AC_PREREQ([2.59])
AC_CONFIG_AUX_DIR([config])
dnl AC_CONFIG_MACRO_DIR([m4])
AM_INIT_AUTOMAKE([-Wall dist-bzip2 dist-zip])
AC_CONFIG_FILES([Makefile])
AC_OUTPUT
